--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="name">Name:</string>
+    <string name="count">Count:</string>
+    <string name="button">Save</string>
+    <string name="error_input_count">Invalid count</string>
+    <string name="error_input_name">Invalid name</string>
+
 </resources>
