--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="button">Save</string>
     <string name="error_input_count">Invalid count</string>
     <string name="error_input_name">Invalid name</string>
+    <string name="add_shop_item_content_description">Add new shop item</string>
 
 </resources>
